# HIT-heli-ROV

./: 2020（2021）年粤港澳暨第七届全国大学生工程训练综合能力竞赛广东省分赛-智能+赛道控制及电路设计方案格式.doc  2020（2021）年粤港澳暨第七届全国大学生工程训练综合能力竞赛广东省分赛-智能+赛道控制及电路设计方案格式.docx  README.md  cyberbrain-0.1.4-py3-none-any.whl  extract.py  哈尔滨工业大学(深圳)-李龙-智能+赛道-水下管道智能巡检-电路文档.doc  视觉流程.vsdx
ROS/catkin_ws_test/src/topic_example/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ROS/catkin_ws_test/src/topic_example/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
ROS/catkin_ws_test/src/topic_example/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ROS/catkin_ws_test/src/topic_example/catkin_generated/installspace/: topic_example.pc  topic_exampleConfig.cmake
ROS/catkin_ws_test/src/topic_example/catkin_generated/stamps/topic_example/: package.xml.stamp
ROS/catkin_ws_test/src/topic_example/devel/: .catkin
ROS/catkin_ws_test/src/topic_example/devel/share/topic_example/cmake/: topic_exampleConfig.cmake
ROS/catkin_ws_test/src/topic_example/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ROS/catkin_ws_test/src/topic_example/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ROS/catkin_ws_test/src/topic_example/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
ROS/catkin_ws_test/src/topic_example/src/: mbot_linux_serial.cpp  mbot_linux_serial.h  publish_node.cpp  tags
ROV/: data.yaml
exp7/: opt.yaml  results.txt  (+1 more)
(+3024 files in other folders)
